--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,34 +1,40 @@
 @import '../../styles/settings.scss';
 
 .button {
-  background: $color-success;
-  border: 0;
-  color: $color-light;
+  background: linear-gradient(to top, $color-dark, $color-light, $color-dark);
+  color: $color-dark;
+  text-shadow: 1px 1px 2px $color-light;
   text-align: center;
   line-height: 1.3;
   padding: $base-size;
   margin: 0 $base-size $base-size $base-size;
-  border-radius: $radius;
   cursor: pointer;
   font-weight: 700;
   text-transform: uppercase;
   transition: $transition;
-  
+  border: none;
+  border-radius: $radius;
+  border: 2px solid;
+  border-color: $color-one;
+  box-shadow: 0 2px 4px $color-one, 0 4px 8px $color-light, 0 8px 16px $color-one;
+
   &:hover {
-    background: darken($color-success, 5%);
+    background: linear-gradient(to top, $color-dark, $color-success, $color-dark);
+    color: $color-one;
+    border-color: $color-light;
   }
-  
+
   &.danger {
     background: $color-warning;
-  
+
     &:hover {
       background: darken($color-warning, 5%);
     }
   }
-  
+
   &.transparent {
     background: transparent;
-  
+
     &:hover {
       color: darken($color-light, 20%);
     }
