--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,17 +1,18 @@
 @import './settings.scss';
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
   padding: 0;
-  background: $color-dark;
   font-family: $font-text;
   font-size: ($base-size * 1.1);
-  color: $color-light;
   letter-spacing: 0.5px;
+  background: linear-gradient(to right, $color-success, $color-dark);
 }
 
 :global(.container) {
